@@ -57,29 +57,27 @@ TaggedLinesSimplifier::setDistanceTolerance(double d)
 	taggedlineSimplifier->setDistanceTolerance(d);
 }
 
-/*public*/
+/*private*/
 void
-TaggedLinesSimplifier::simplifyLine(TaggedLineString* tls)
+TaggedLinesSimplifier::simplify(TaggedLineString& tls)
 {
-	taggedlineSimplifier->simplify(tls);
+	taggedlineSimplifier->simplify(&tls);
 }
-
-/*public*/
-void
-TaggedLinesSimplifier::simplify(
-		std::vector<TaggedLineString*>::iterator begin,
-		std::vector<TaggedLineString*>::iterator end)
-{
-	for_each(begin, end, bind1st(
-		mem_fun(&TaggedLinesSimplifier::simplifyLine), this));
-}
-
 
 } // namespace geos::simplify
 } // namespace geos
 
 /**********************************************************************
  * $Log$
+ * Revision 1.3  2006/05/24 11:41:23  strk
+ *         * source/headers/geos/simplify/TaggedLinesSimplifier.h,
+ *         source/simplify/TaggedLinesSimplifier.cpp,
+ *         source/simplify/TopologyPreservingSimplifier.cpp:
+ *         fixed bug in TopologyPreservingSimplifier failing to
+ *         detect intersections, refactored TaggedLinesSimplifier
+ *         class to more closely match JTS and use templated
+ *         functions.
+ *
  * Revision 1.2  2006/04/13 14:25:17  strk
  * TopologyPreservingSimplifier initial port
  *
